--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "rsd-website",
   "scripts": {
-    "build": "rollup scripts/main.js --file build/bundle.js --sourcemap",
-    "styles": "sass styles/main.scss build/styles.css",
-    "html": "node packaging/build.js"
+    "build": "npm run build-html && npm run build-js && npm run build-sass",
+    "build-html": "node tools/build-html.js",
+    "build-js": "rollup scripts/main.js --file build/bundle.js --sourcemap",
+    "build-sass": "sass styles/main.scss build/styles.css",
+    "start": "npm run build && node tools/start-dev-server.js"
   },
   "type": "module",
   "devDependencies": {
+    "express": "^4.18.1",
     "js-beautify": "^1.14.3",
     "nunjucks": "^3.2.3",
     "rollup": "^2.75.6",
