--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "express": "^4.18.1",
     "js-beautify": "^1.14.3",
+    "netlify-cli": "^10.5.0",
     "nunjucks": "^3.2.3",
     "rollup": "^2.75.6",
     "sass": "^1.52.2",
