--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "rsd-website",
   "scripts": {
     "build": "./tools/build.sh",
-    "start": "npm run build && node tools/start-dev-server.js"
+    "start": "npm run build && node tools/start-dev-server.js",
+    "watch": "./tools/watch.sh"
   },
   "type": "module",
   "devDependencies": {
     "express": "^4.18.1",
     "js-beautify": "^1.14.3",
     "netlify-cli": "^10.5.0",
+    "nodemon": "^2.0.16",
     "nunjucks": "^3.2.3",
     "rollup": "^2.75.6",
     "sass": "^1.52.2",
