--- a/content/index.yaml
+++ b/content/index.yaml
@@ -2,3 +2,4 @@ title: Re-Style Decorators
 banner:
   src: '/images/homepage-banner.jpeg'
   alt: 'Spencer Stuart office fit-out'
+slogan: 'Trusted for the perfect finish since 1991'
