--- a/content/index.yaml
+++ b/content/index.yaml
@@ -5,6 +5,24 @@ banner:
 slogan: 'Trusted for the perfect finish since 1991'
 services:
   title: 'Our Services'
+  sections:
+    - items:
+      - icon: '/images/city-icon.svg'
+        text: 'Cat B fit-outs and commercial refurbishments'
+      - icon: '/images/apartment-building-icon.svg'
+        text: 'Housing and retail refurbishments'
+    - items:
+      - icon: '/images/paint-roller-icon.svg'
+        text: 'High quality paint finishes - rolled, hand-painted or sprayed'
+      - icon: '/images/wallpaper-icon.svg'
+        text: 'Bespoke wall coverings and graphics'
+      - icon: '/images/paint-brush-icon.svg'
+        text: 'Specialist paints, such as intumescent, waterproof and mould-resistant coatings'
+    - items:
+      - icon: '/images/city-icon.svg'
+        text: 'London-based, with over 30 years experience in the city's construction industry'
+      - icon: '/images/uk-icon.svg'
+        text: 'Contracts across the South of England, in locations such as Bristol, Southend-on-Sea and Royal Tunbridge Wells'
 portfolio:
   title: 'Our Work'
   images:
