--- a/content/index.yaml
+++ b/content/index.yaml
@@ -8,21 +8,21 @@ services:
   sections:
     - items:
       - icon: 'icon-desk'
-        text: 'Cat B fit-outs and commercial refurbishments'
+        text: 'Cat B commercial fit-outs and office refurbishments'
       - icon: 'icon-apartment-building'
         text: 'Housing and retail refurbishments'
     - items:
       - icon: 'icon-paint-roller'
-        text: 'High quality paint finishes - rolled, hand-painted or sprayed'
+        text: 'Top-quality paint finishes, whether rolled, hand-painted or sprayed'
       - icon: 'icon-wallpaper'
         text: 'Bespoke wall coverings and graphics'
       - icon: 'icon-paint-brush'
         text: 'Specialist paints, such as intumescent, waterproof and mould-resistant coatings'
     - items:
       - icon: 'icon-city'
-        text: "London-based, with over 30 years experience in the city's construction industry"
+        text: "London-based, with over 30 years of experience in the city's construction industry"
       - icon: 'icon-uk'
-        text: 'Contracts across the South of England, in locations such as Bristol, Southend-on-Sea and Royal Tunbridge Wells'
+        text: 'Projects completed across the South of England'
 portfolio:
   title: 'Our Work'
   images:
