--- a/content/global.yaml
+++ b/content/global.yaml
@@ -12,8 +12,11 @@ menu:
   - page: 'Home'
     href: '/'
   - page: 'About Us'
-    href: '/about.html'
+    href: '#about'
+    # href: '/about.html'
   - page: 'Our Work'
-    href: '/portfolio.html'
+    href: '#work'
+    # href: '/portfolio.html'
   - page: 'Contact Us'
-    href: '/contact.html'
+    href: '#contact'
+    # href: '/contact.html'
