--- a/content/index.yaml
+++ b/content/index.yaml
@@ -52,7 +52,7 @@ portfolio:
 clients:
   title: 'Our Clients'
   preamble: >
-    We are proud to deliver projects for the leading contractors in London, including:
+    We are proud to deliver projects for leading UK contractors, including:
   list:
     - Overbury
     - BW
