--- a/content/index.yaml
+++ b/content/index.yaml
@@ -28,7 +28,17 @@ about:
   description:
     paragraphs:
       - >
-        This is where we will put a concise about us such as brief business details. Probably this section would span 100-200 words, potentially even short bullet points.
+        Established in 1991 by Managing Director, David Wilson, Re-Style Decorators has grown into a
+        well-reputed commercial painting and decorating company with a strong workforce of over forty.
+      - >
+        We principally carry out commercial decoration works, such as general painting, hanging
+        wallcoverings and spray work in the office fit-out market of London and the Home Counties.
+        We're proud our flexibility, delivering excellence on projects of all sizes from £1m down to £1k,
+        and completing works on retail and housing projects on special request.
+      - >
+        Staying in budget and on time is non-negotiable for Dave and his team. Our ethos resolves around
+        excellence in time management, no financial liberties, reasonable costs and most of all our
+        uncompromising Health and Safety approach.
   image:
     - src: ''
       alt: ''
