Fix capitalisation bug

--- a/content/global.yaml
+++ b/content/global.yaml
@@ -6,7 +6,7 @@ meta:
   siteDescription: ''
   siteIcon: ''
 
-headerLogo: '/images/rsd-logo.png'
+headerLogo: '/images/RSD-logo.png'
 
 menu:
   - page: 'Home'
