Update email address

--- a/content/global.yaml
+++ b/content/global.yaml
@@ -22,7 +22,7 @@ menu:
     # href: '/contact.html'
 
 contact:
-  email: 'dave@restyledecorators.com'
+  email: 'info@restyledecorators.com & dave@restyledecorators.com'
   telephone: '01920 871 960'
   address: |
     Unit 100 Maltings Business Park
