--- a/content/index.yaml
+++ b/content/index.yaml
@@ -78,3 +78,11 @@ clients:
     - Artemis Interiors
     - McLaren Construction
     - Red Construction
+award:
+  title: 'Award-winning'
+  text: >
+    Re-Style Decorators was named <b>Best Commercial Decorators in South East England</b> at the Build Construction
+    & Engineering Awards in 2020.
+  image:
+    src: '/images/Certificate.png'
+    alt: 'Build Construction & Engineering Awards certificate'
