Update clients list

--- a/content/index.yaml
+++ b/content/index.yaml
@@ -73,9 +73,9 @@ clients:
     - Overbury
     - BW
     - Alco Contracts
-    - ISG
-    - Willmott Dixon
-    - Artemis Interiors
+    - Area
+    - Glencar Construction
+    - Epiphany
     - McLaren Construction
     - Red Construction
 award:
